# Szkdg

./: .gitignore  CMakeLists.txt  CreateDeleteQuery.cpp  CreateInsertQuery.cpp  CreateInsertQuery.h  DFS.cpp  DFS.h  DecrementalGraph.cpp  DecrementalGraph.h  ETT.cpp  ETT.h  GraphGen.cpp  GraphGen.h  IncrementalAlgorithm.h  Main.cpp  README.md  Szakdolgozat.cbp  Szakdolgozat.depend  Szakdolgozat.layout  Test.cpp  Test.h  TestETT.cpp  TestETT.h  TraditionalAlgorithm.h  UniFind.cpp  UniFind.h
src/: CMakeLists.txt  CreateDeleteQuery.cpp  CreateDeleteQuery.h  CreateInsertQuery.cpp  DFS.cpp  DFS.h  DecrementalGraph.cpp  DecrementalGraph.h  ETT.cpp  ETT.h  ETTQueries.cpp  ETTQueries.h  ETTSetter.cpp  ETTSetter.h  ETTUpdater.cpp  ETTUpdater.h  GraphGen.h  IncrementalAlgorithm.cpp  Main.cpp  Test.cpp  Test.h  TestETT.cpp  TraditionalAlgorithm.cpp  UniFind.cpp  UniFind.h
test/: CMakeLists.txt  firstTest.cpp  gtest.cpp
